--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy" : "gatsby build && gh-pages -d public -b develop"
+    "deploy" : "gatsby build && gh-pages -d public -b main"
   },
   "repository": {
     "type": "git",
